src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adults__c</fullName>
        <label>Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Postal_Code__c</fullName>
        <formula>if (
AND(LEN(BillingPostalCode) &lt; 5, LEN(ShippingPostalCode) &lt; 5), 
&quot;Blank&quot;,
if (ISNUMBER(LEFT(BLANKVALUE(BillingPostalCode, ShippingPostalCode), 5)), 
LEFT(BLANKVALUE(BillingPostalCode, ShippingPostalCode), 5),
&quot;Blank&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commodity_Usage_JSON__c</fullName>
        <inlineHelpText>JSON data that records the total usage of commodities in the month of the most recent visit.</inlineHelpText>
        <label>Commodity Usage JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Points_Remaining__c</fullName>
        <description>Total points remaining in the month of the most recent visit.</description>
        <formula>Monthly_Points_Available__c - Current_Points_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total points remaining in the month of the most recent visit.</inlineHelpText>
        <label>Current Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Points_Used__c</fullName>
        <description>Total number of points used in month of most recent visit.</description>
        <inlineHelpText>Total number of points used in month of most recent visit.</inlineHelpText>
        <label>Current Points Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Created_Date__c</fullName>
        <description>Store the date the external entry was created.</description>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Visit__c</fullName>
        <label>First Visit</label>
        <summarizedField>FoodBank_Visit__c.Visit_Date__c</summarizedField>
        <summaryForeignKey>FoodBank_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infant_Card_Expires__c</fullName>
        <label>Infant Card Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Infants__c</fullName>
        <label>Infants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Points_Available__c</fullName>
        <inlineHelpText>Number of points allowed per month, set automatically based on food bank settings.</inlineHelpText>
        <label>Monthly Points Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Visit__c</fullName>
        <label>Most Recent Visit</label>
        <summarizedField>FoodBank_Visit__c.Visit_Date__c</summarizedField>
        <summaryForeignKey>FoodBank_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Cook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_Of_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Commodity_Usage_JSON__c</fullName>
        <inlineHelpText>JSON data that records the pending usage of commodities related to checkin queue.</inlineHelpText>
        <label>Pending Commodity Usage JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Notes__c</fullName>
        <inlineHelpText>Pending notes related to checkin queue.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Power_Of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unduplicated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address_Date__c</fullName>
        <label>Proof of Address Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address__c</fullName>
        <inlineHelpText>Type of address proof provided and/or initials of user who verified the address</inlineHelpText>
        <label>Proof of Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seniors__c</fullName>
        <label>Seniors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Referred by agency (identify in Notes)</fullName>
                </value>
                <value>
                    <fullName>Referred by individual</fullName>
                </value>
                <value>
                    <fullName>Newspaper, radio, TV, internet</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t know or won&apos;t say</fullName>
                </value>
                <value>
                    <fullName>Phone book</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Other (Identify in Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Diet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate dietary restrictions in notes field.</inlineHelpText>
        <label>Special Diet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Notes__c</fullName>
        <label>Staff Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Cook</fullName>
                </value>
                <value>
                    <fullName>Special Diet</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Visits__c</fullName>
        <label>Total Visits</label>
        <summaryForeignKey>FoodBank_Visit__c.Household__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>